# avito

./: .env.example  .gitignore  94165eca3416_history.py  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.md
src/: __main__.py
src/config/: settings.py
src/controllers/: bids.py  tenders.py  user_organization.py
src/db/: alembic.ini  insert.py
src/db/connection/: session.py
src/db/migrator/: env.py
src/db/migrator/versions/: 059906ad6b3b_feedback.py  0d73a7b377da_.py  4b1e38e0b792_.py  4b1e38e0b792_initial.py  5190e50192f3_init.py  8164c32e7a9c_init.py  9cfb4676f705_history.py  a96b09013a66_init.py  b8b56c5cd951_init.py  e752762b9502_.py  e752762b9502_tender_bid.py  e913a1eee022_bid_desicion.py
src/db/models/: models.py
src/schemas/: bid.py  enums.py  organization.py  response.py  review.py  schema.py  tender.py  username.py
src/view/: __init__.py  bid.py  ping.py  tender.py
