[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["dexxhawk <Dsshnyakin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
alembic = "^1.13.2"
fastapi = "^0.114.0"
sqlacodegen-v2 = "^0.1.4"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
